[package]
name = "devstuff"
description = "A collection of development tools"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mustakimali/devstuff-rs"
authors = ["Mohammad Mustakim Ali <i@mustak.im>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
uuid = {version = "0.8.2", features = ["v4"]}
chrono = "0.4.19"
base64 = "0.13.0"
minify = "1.3.0"
anyhow = "1.0.55"
atty = "0.2.14"
serde_json = "1.0.79"
crypto-hash = "0.3.4"
blake3 = "1.3.1"